test/mpi/errors/cxx/errhan/Makefile.sm
INCLUDES = -I../../../include -I${srcdir}/../../../include
LDADD = -L../../../../../lib 
DEPADD = @MPILIBLOC@ 
smvar_do_sharedlibs = 0

errsetx_SOURCES   = errsetx.cxx

